force-app/main/default/objects/Documents_Submitted__c/Documents_Submitted__c.object-meta.xml
<CustomObject>
    <label>Documents Submitted</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents Submitted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>