force-app/main/default/objects/Documents_Submitted__c/fields/Adhaar_Card__c.field-meta.xml
<CustomField>
    <fullName>Adhaar_Card__c</fullName>
    <label>Adhaar Card</label>
    <length>20</length>
    <type>Text</type>
</CustomField>