force-app/main/default/objects/Documents_Submitted__c/fields/Document_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_Status__c</fullName>
    <label>Document Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>