force-app/main/default/objects/Documents_Submitted__c/fields/Experience_Letter__c.field-meta.xml
<CustomField>
    <fullName>Experience_Letter__c</fullName>
    <label>Experience Letter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>