force-app/main/default/objects/Documents_Submitted__c/fields/Experience_Letter_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Experience_Letter_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience Letter Submitted</label>
    <type>Checkbox</type>
</CustomField>