force-app/main/default/objects/Documents_Submitted__c/fields/Graduation_Marksheet__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Marksheet__c</fullName>
    <label>Graduation Marksheet</label>
    <length>20</length>
    <type>Text</type>
</CustomField>