force-app/main/default/objects/Documents_Submitted__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Details</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Documents Submits</relationshipLabel>
    <relationshipName>Documents_Submits</relationshipName>
    <type>Lookup</type>
</CustomField>