force-app/main/default/objects/Documents_Submitted__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <label>Pan Card</label>
    <length>20</length>
    <type>Text</type>
</CustomField>