force-app/main/default/objects/Documents_Submitted__c/fields/Pan_Card__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pan Card</label>
    <type>Checkbox</type>
</CustomField>