force-app/main/default/objects/Documents_Submitted__c/fields/Post_Graduation_Marksheet__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduation_Marksheet__c</fullName>
    <label>Post Graduation Marksheet</label>
    <length>25</length>
    <type>Text</type>
</CustomField>