force-app/main/default/objects/Documents_Submitted__c/fields/Post_Graduation_Marksheet_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduation_Marksheet_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-Graduation Marksheet Submitted</label>
    <type>Checkbox</type>
</CustomField>