force-app/main/default/objects/Documents_Submitted__c/fields/Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check__c</fullName>
    <label>Documents Quality Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>