force-app/main/default/objects/Documents_Submitted__c/fields/Tenth_Marksheet__c.field-meta.xml
<CustomField>
    <fullName>Tenth_Marksheet__c</fullName>
    <label>Tenth Marksheet</label>
    <length>20</length>
    <type>Text</type>
</CustomField>