force-app/main/default/objects/Documents_Submitted__c/fields/Tenth_Marksheet_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Tenth_Marksheet_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenth Marksheet Submitted</label>
    <type>Checkbox</type>
</CustomField>