force-app/main/default/objects/Documents_Submitted__c/fields/Twefth_Marksheet__c.field-meta.xml
<CustomField>
    <fullName>Twefth_Marksheet__c</fullName>
    <label>Twelfth Marksheet</label>
    <length>20</length>
    <type>Text</type>
</CustomField>